--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 :root{
     --body-font: 'Poppins', sans-serif;
     --light-font-color: rgb(0, 199, 199);
+    --navbar-background: rgba(0, 72, 72, 0.6);
+    --hero-text-background: rgba(0, 128, 128, 0.5);
 }
 
 *{
@@ -48,7 +50,7 @@ pre{
     justify-content: center;
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgba(0, 128, 128, 0.5);
+    background-color: var(--hero-text-background);
     padding: 1rem 1.3rem;
     width: fit-content;
     height: fit-content;
@@ -96,7 +98,7 @@ pre{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(0, 72, 72, 0.6);
+    background-color: var(--navbar-background);
     position: sticky;
     z-index: 110;
     top: 0;
@@ -108,7 +110,7 @@ pre{
 .footer{
     width: 100%;
     height: 5rem;
-    background-color: rgba(0, 72, 72, 0.6);
+    background-color: var(--navbar-background);
     display: grid;
     place-items: center;
 }
