--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ pre{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -100%);
+    animation: heroAnimation 4s ease-in-out;
+}
+
+@keyframes heroAnimation{
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .post-title{
@@ -323,6 +333,7 @@ pre{
     width: 100%;
     height: 100%;
     z-index: 20;
+    box-shadow: 5px 5px 1px rgb(0, 199, 199);
 }
 
 .profile-img{
