--- a/style.css
+++ b/style.css
@@ -333,7 +333,20 @@ pre{
     width: 100%;
     height: 100%;
     z-index: 20;
-    box-shadow: 5px 5px 1px rgb(0, 199, 199);
+    box-shadow: 10px 5px 1px rgb(0, 199, 199),
+                15px -5px 1px rgba(0, 128, 128, 0.5),
+                inset 5px 5px 70px rgb(0, 0, 0);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 15%;
+}
+
+.profile-mask-upper::after{
+    content: '';
+    width: 100%;
+    height: 5px;
+    background-color: rgb(199, 0, 0);
+    margin: 5rem;
+
 }
 
 .profile-img{
