--- a/style.css
+++ b/style.css
@@ -357,7 +357,6 @@ pre{
 }
 
 .four p{
-    font-size: 1.5rem;
     margin: 0.5rem 0;
 }
 
@@ -438,6 +437,14 @@ pre{
     border-radius: 50%;
 }
 
+.about-text{
+    font-size: 1.7rem;
+}
+
+.about-text-sub{
+    font-size: 1.1rem;
+}
+
 .pinterest-logo{
     border-width: 0;
 }
@@ -475,12 +482,9 @@ pre{
     .skills-list{
         font-size: 1.2rem;
     }
-    .about-text-div{
+    /* .about-text-div{
         width: 50vw;
-    }
-    .about-text-div p{
-        font-size: 1.2rem;
-    }
+    } */
     .about-text-div a img{
         width: 3rem;
     }
@@ -532,18 +536,37 @@ pre{
     }
     .ham-menu{
         display: block;
-    }    
-    .about-text-div p {
-        font-size: 1rem;
     }
     .about-text-div {
-        width: 60vw;
+        width: auto;
+    }
+    .about-text{
+        font-size: 1.3rem;
+    }
+    .about-text-sub{
+        font-size: 1rem;
     }
     .about-text-div a img {
         width: 2rem;
     }
     .four .about-sub-section {
         display: block;
+    }
+    .about-profile-div{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 806px){
+    .social-links-title {
+        margin-top: 0;
+    }
+    .resume-btn {
+        margin-top: 1rem;
+    }
+    .four{
+        padding: 0 7rem 0;
+        margin-bottom: 5rem;
     }
 }
 
@@ -559,9 +582,6 @@ pre{
         padding: 5rem 7rem 0;
     }
     .profile-mask-upper{
-        display: none;
-    }
-    .about-profile-div{
         display: none;
     }
 }
